syntax = "proto3";
package com.example.TrendingMoviesService.grpcApi;
option java_multiple_files = true;
option java_package = "com.example.TrendingMoviesService.grpcApi";

service TrendingToRatingData {
  rpc getTrendingMovies(Empty) returns (StringList);
}

message Empty {}

message StringList {
  repeated string movies = 1;
}